// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
  >
    <span
      class="c-b8lkzb soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="ciddcb4 soui-tag-tag c19eem0 soui-tag-info c15kqx0 soui-tag-bright"
  >
    <span
      class="c-b8lkzb soui-tag-wrapper"
    >
      Info
    </span>
  </div>
  <div
    class="ciddcb4 soui-tag-tag c1ueoh9 soui-tag-danger c15kqx0 soui-tag-bright"
  >
    <span
      class="c-b8lkzb soui-tag-wrapper"
    >
      Danger
    </span>
  </div>
  <div
    class="ciddcb4 soui-tag-tag c-j122jy soui-tag-warning c15kqx0 soui-tag-bright"
  >
    <span
      class="c-b8lkzb soui-tag-wrapper"
    >
      Warning
    </span>
  </div>
  <div
    class="ciddcb4 soui-tag-tag c2ix9tl soui-tag-success c15kqx0 soui-tag-bright"
  >
    <span
      class="c-b8lkzb soui-tag-wrapper"
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-4p109p soui-tag-tangerine c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-nx06e9 soui-tag-magenta c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c7u0ruu soui-tag-purple c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c4elrto soui-tag-indigo c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19asq5 soui-tag-cyan c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19hf34 soui-tag-neon c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-vw7ouv soui-tag-lemon c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-w1haac soui-tag-brown c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-4p109p soui-tag-tangerine c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-nx06e9 soui-tag-magenta c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c7u0ruu soui-tag-purple c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c4elrto soui-tag-indigo c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19asq5 soui-tag-cyan c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19hf34 soui-tag-neon c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-vw7ouv soui-tag-lemon c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-w1haac soui-tag-brown c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-4p109p soui-tag-tangerine cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-nx06e9 soui-tag-magenta cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c7u0ruu soui-tag-purple cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c4elrto soui-tag-indigo cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19asq5 soui-tag-cyan cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19hf34 soui-tag-neon cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-vw7ouv soui-tag-lemon cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-w1haac soui-tag-brown cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-4p109p soui-tag-tangerine cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-nx06e9 soui-tag-magenta cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c7u0ruu soui-tag-purple cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c4elrto soui-tag-indigo cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19asq5 soui-tag-cyan cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19hf34 soui-tag-neon cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-vw7ouv soui-tag-lemon cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-w1haac soui-tag-brown cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19eem0 soui-tag-info c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c1ueoh9 soui-tag-danger c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-j122jy soui-tag-warning c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c2ix9tl soui-tag-success c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19eem0 soui-tag-info c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c1ueoh9 soui-tag-danger c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-j122jy soui-tag-warning c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c2ix9tl soui-tag-success c19ce31 soui-tag-fill"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19eem0 soui-tag-info cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c1ueoh9 soui-tag-danger cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-j122jy soui-tag-warning cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c2ix9tl soui-tag-success cf3yipk soui-tag-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c19eem0 soui-tag-info cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c1ueoh9 soui-tag-danger cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-j122jy soui-tag-warning cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c2ix9tl soui-tag-success cl05bha soui-tag-bright-outline"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-vs89s3 soui-tag-small c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Small
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-vwa5an soui-tag-large c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="ciddcb4 soui-tag-tag c-vs89s3 soui-tag-small c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
    >
      <div
        class="c-b8lkzb soui-tag-wrapper"
      >
        <span
          class="c-abmgax soui-tag-container"
        >
          Small
        </span>
      </div>
      <div
        class="c-biemt5 soui-tag-close-icon"
      >
        <span
          class="cp1aoi4 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
    >
      <div
        class="c-b8lkzb soui-tag-wrapper"
      >
        <span
          class="c-abmgax soui-tag-container"
        >
          Default
        </span>
      </div>
      <div
        class="c-biemt5 soui-tag-close-icon"
      >
        <span
          class="cp1aoi4 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-vwa5an soui-tag-large c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
    >
      <div
        class="c-b8lkzb soui-tag-wrapper"
      >
        <span
          class="c-abmgax soui-tag-container"
        >
          Large
        </span>
      </div>
      <div
        class="c-biemt5 soui-tag-close-icon"
      >
        <span
          class="cp1aoi4 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
    >
      <div
        class="c-b8lkzb soui-tag-wrapper"
      >
        <span
          class="c-abmgax soui-tag-container"
        >
          Tag 1
        </span>
      </div>
      <div
        class="c-biemt5 soui-tag-close-icon"
      >
        <span
          class="cp1aoi4 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
    >
      <div
        class="c-b8lkzb soui-tag-wrapper"
      >
        <span
          class="c-abmgax soui-tag-container"
        >
          Tag 2
        </span>
      </div>
      <div
        class="c-biemt5 soui-tag-close-icon"
      >
        <span
          class="cp1aoi4 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright c-pf4dkq soui-tag-disabled"
    >
      <div
        class="c-b8lkzb soui-tag-wrapper"
      >
        <span
          class="c-abmgax soui-tag-container"
        >
          Tag 3
        </span>
      </div>
      <div
        class="c-biemt5 soui-tag-close-icon"
      >
        <span
          class="cp1aoi4 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default cf3yipk soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class="c-b8lkzb soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-right: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
  >
    <div
      class="c-b8lkzb soui-tag-wrapper"
    >
      <span
        class="c-abmgax soui-tag-container"
      >
        Abc
      </span>
    </div>
    <div
      class="c-biemt5 soui-tag-close-icon"
    >
      <span
        class="cp1aoi4 soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="ciddcb4 soui-tag-tag c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
  >
    <span
      class="c-b8lkzb soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="ciddcb4 soui-tag-tag c-epngbh soui-tag-rounded c-c2sceh soui-tag-default c15kqx0 soui-tag-bright"
  >
    <span
      class="c-b8lkzb soui-tag-wrapper"
    >
      Rounded
    </span>
  </div>
</div>
`;
